# OpenGLES_android_native

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opengles_android_native/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/base/: base.cpp  base.h  native-lib.cpp
app/src/main/cpp/cube/: cube.cpp  cube.h
app/src/main/cpp/triangle/: triangle.cpp  triangle.h
app/src/main/java/com/example/opengles_android_native/: MainActivity.kt
app/src/main/java/com/example/opengles_android_native/openglsdk/: MGLRenderer.kt  MGLSurfaceView.kt  NativeCode.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/opengles_android_native/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
